--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "express boilerplate setup",
+	"name": "express-boilerplate-setup",
 	"version": "1.0.0",
 	"description": "Rest Services for Digital Interview System",
 	"main": "server.js",
@@ -7,11 +7,12 @@
 	"license": "MIT",
 	"scripts": {
 		"start": "node server.js",
-		"server": "nodemon server.js",
+		"server": "nodemon server.js"
 	},
 	"dependencies": {
 		"bcrypt": "^4.0.1",
 		"concurrently": "^5.1.0",
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.9.9",
